--- a/css/status.css
+++ b/css/status.css
@@ -72,11 +72,12 @@ svg:hover {
   height: 100%;
   display: flex;
   justify-content: space-between;
+  overflow: hidden;
 }
 
 /* Right Section */
 #right-status {
-  /* display: none; */
+  display: none;
   width: 69%;
   max-height: 100%;
   min-height: 100%;
@@ -116,9 +117,11 @@ svg:hover {
 /* Left Section */
 #left-status {
   width: 29%;
-  height: 100%;
+  height: 100vh;
+  max-height: 100vh;
   flex: 1;
   background: var(--bg-left-status);
+  overflow: hidden;
 }
 
 #left-status .left-head-status {
@@ -197,4 +200,10 @@ svg:hover {
 }
 #left-status .left-status-recent div:nth-child(3) img {
   border: 2px solid var(--status-off);
+}
+
+@media screen and (min-width: 426px) {
+  #right-status {
+    display: block;
+  }
 }
