--- a/css/style.css
+++ b/css/style.css
@@ -61,17 +61,9 @@ svg:hover {
   background: var(--bg-light);
 }
 
-.current {
-  background: var(--bg-selected);
-}
-
-.current:hover {
-  background-color: var(--bg-selected) !important;
-}
-
 /* Right Section */
 #right {
-  /* display: none; */
+  display: none;
   width: 69%;
   height: 100%;
   flex: 2.5;
@@ -258,4 +250,24 @@ svg:hover {
   align-self: flex-start;
   justify-self: flex-end;
   padding-right: 20px;
+}
+
+@media screen and (min-width: 426px) {
+  #right {
+    display: block;
+  }
+
+  .selected {
+    background: var(--bg-selected);
+  }
+
+  .selected:hover {
+    background-color: var(--bg-selected) !important;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  * {
+    font-size: 99%;
+  }
 }
